--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
 <h1>Hello world</h1>
+<nav>
+  <a routerLink="/ksiazki">ksiazki</a><br />
+  <a routerLink="/osoby">osoby</a><br />
+  <a routerLink="/wypozyczenia">wypozyczenia</a><br />
+  <a routerLink="/oplaty">oplaty</a><br />
+</nav>
+<router-outlet></router-outlet>
