--- a/src/app/ksiazka/ksiazka.component.html
+++ b/src/app/ksiazka/ksiazka.component.html
@@ -1,1 +1,10 @@
-<p>ksiazka works!</p>
+<input
+  [(ngModel)]="searchedValue"
+  (keydown.enter)="booksSearch(searchedValue)"
+/>
+
+<ul *ngFor="let book of books">
+  <li class="book-container">
+    {{ book.autor + " - " + book.nazwa }}
+  </li>
+</ul>
