oplatyIdRoute(zarzadzanie czytelnikiem?) and some changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,7 +28,7 @@
     <button
       pButton
       type="button"
-      routerLink="/oplaty"
+      [routerLink]="['/oplaty', 0]"
       label="OPLATY"
       class="p-button-warning"
     ></button>
