--- a/src/app/oplaty/oplaty.component.html
+++ b/src/app/oplaty/oplaty.component.html
@@ -1,1 +1,11 @@
-<p>oplaty works!</p>
+<div *ngIf="id === '0'; else profile">
+  <!-- znajdz zawodnika-->
+  tutaj ma byc wybieranie uzytkownika
+  <button (click)="go()">Zmien na user id=1</button>
+</div>
+<ng-template #profile>
+  <!--rob cos zawodnikiem-->
+  <button (click)="back()">powrot</button><br />
+  id = {{ id }} = tutaj ma byc historia wypozyczen mozliwosc wypozyczenia oplaty
+  itd
+</ng-template>
