person details created (person-form)

--- a/src/app/oplaty/oplaty.component.html
+++ b/src/app/oplaty/oplaty.component.html
@@ -1,11 +1,11 @@
-<div *ngIf="id === '0'; else profile">
-  <!-- znajdz zawodnika-->
+<!-- <div *ngIf="id === '0'; else profile">
+
   tutaj ma byc wybieranie uzytkownika
   <button (click)="go()">Zmien na user id=1</button>
 </div>
 <ng-template #profile>
-  <!--rob cos zawodnikiem-->
+
   <button (click)="back()">powrot</button><br />
   id = {{ id }} = tutaj ma byc historia wypozyczen mozliwosc wypozyczenia oplaty
   itd
-</ng-template>
+</ng-template> -->
