--- a/src/app/osoba/osoba.component.html
+++ b/src/app/osoba/osoba.component.html
@@ -137,6 +137,7 @@
           type="button"
           icon="pi pi-plus"
           class="p-button-rounded p-button-text p-button-success p-button-sm"
+          [routerLink]="person.id"
         ></button>
       </td>
       <!-- guzik edycje -->
