to refactor book.dostepnosc

--- a/src/app/osoba/person-form/person-form.component.html
+++ b/src/app/osoba/person-form/person-form.component.html
@@ -25,6 +25,7 @@
           {{
             l.Book.nazwa + " | od - " + l.Loan.dataPrzyjecia.toLocaleString()
           }}
+          <button (click)="returnBook(l.Loan.id)">Oddaj</button>
         </li>
       </ul>
     </div>
