--- a/src/app/osoba/person-form/person-form.component.css
+++ b/src/app/osoba/person-form/person-form.component.css
@@ -4,3 +4,8 @@
   align-content: center;
   justify-content: space-around;
 }
+.button-container {
+  align-content: center;
+  justify-content: space-around;
+  display: flex;
+}
