--- a/src/app/ksiazka/book-form/book-form.component.html
+++ b/src/app/ksiazka/book-form/book-form.component.html
@@ -11,6 +11,68 @@
 </div>
 
 <ng-template #content>
+  <nav class="bar">
+    <span class="p-buttonset">
+      <button
+        pButton
+        type="button"
+        label="ILOSC AKTUALNYCH WYPOŻYCZEŃ: {{ loans.length }}"
+        class="p-button-warning p-button-outlined"
+        icon="pi pi-calendar"
+      ></button>
+      <button
+        pButton
+        type="button"
+        label="WYSZUKAJ"
+        (click)="toggleSearch()"
+        class="p-button-warning p-button-outlined"
+        icon="pi pi-search"
+      ></button>
+      <button
+        pButton
+        type="button"
+        icon="pi pi-pencil"
+        label="EDYTUJ KSIĄŻKĘ"
+        (click)="toggleEditBar()"
+        class="p-button-warning p-button-outlined"
+      ></button>
+    </span>
+    <!-- search bar -->
+    <div [hidden]="showSearch">
+      <div class="p-inputgroup">
+        <button
+          type="button"
+          pButton
+          pRipple
+          icon="pi pi-search"
+          class="p-button-warning p-button-outlined"
+        ></button>
+        <input
+          type="text"
+          pInputText
+          placeholder="Wyszukaj osobę"
+          class="p-button-warning"
+        />
+      </div>
+    </div>
+    <!-- edit bar -->
+    <div [hidden]="showEdit">
+      <div class="p-inputgroup">
+        <button
+          type="button"
+          pButton
+          pRipple
+          icon="pi pi-pencil"
+          class="p-button-warning p-button-outlined"
+        ></button>
+        <input type="text" placeholder="Tytuł" />
+        <input type="text" placeholder="Autor" />
+        <input type="number" placeholder="Rok Wydania" />
+        <input type="number" placeholder="Dostępność" />
+      </div>
+    </div>
+  </nav>
+  <hr />
   <p-table>
     <ng-template pTemplate="header">
       <tr>
@@ -32,7 +94,7 @@
         </td>
       </tr>
       <tr>
-        <td>AUTOR</td>
+        <td>ROK WYDANIA</td>
         <td>
           <b>{{ book?.rokWydania }}</b>
         </td>
@@ -41,6 +103,41 @@
         <td>DOSTĘPOŚĆ</td>
         <td>
           <b>{{ book?.dostepnosc }}</b>
+        </td>
+      </tr>
+    </ng-template>
+  </p-table>
+  <hr />
+  <p-table
+    [value]="loans"
+    [scrollable]="true"
+    scrollHeight="600px"
+    styleClass="p-datatable-striped"
+  >
+    <ng-template pTemplate="header">
+      <tr>
+        <th class="bttnsID">ID OSOBY</th>
+        <th class="dane">IMIE</th>
+        <th class="dane">NAZWISKO</th>
+        <th class="dane">DATA PRZYJĘCIA</th>
+        <th class></th>
+      </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-loans>
+      <tr>
+        <td class="bttnsID">{{ loans.Loan.id }}</td>
+        <td class="dane">{{ loans.Person.imie }}</td>
+        <td class="dane">{{ loans.Person.nazwisko }}</td>
+        <td class="dane">{{ loans.Loan.dataPrzyjecia.toLocaleString() }}</td>
+        <td style="min-width: 55%"></td>
+        <td class="bttns">
+          <button
+            pButton
+            pRipple
+            type="button"
+            icon="pi pi-trash"
+            class="p-button-rounded p-button-text p-button-danger p-button-sm"
+          ></button>
         </td>
       </tr>
     </ng-template>
