--- a/src/app/osoba/person-form/person-form.component.css
+++ b/src/app/osoba/person-form/person-form.component.css
@@ -2,10 +2,43 @@
   display: flex;
   flex-direction: row;
   align-content: center;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 .button-container {
   align-content: center;
   justify-content: space-around;
   display: flex;
+}
+ul {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  margin-left: 25px;
+  padding: 2px;
+}
+div {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 25px;
+}
+
+.name {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 30px;
+  text-align: center;
+  justify-content: center;
+}
+
+.bar {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.dane {
+  max-width: 50%;
+}
+.dane2 {
+  max-width: 20%;
+}
+
+.bttns {
+  max-width: 10%;
 }
